--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>drivers-java</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/neo4j-graphacademy/drivers-java</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,11 +24,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-      <dependency>
+      <!-- <dependency>
         <groupId>org.neo4j.driver</groupId>
         <artifactId>neo4j-java-driver</artifactId>
         <version>5.28.4</version>
-      </dependency>
+      </dependency> -->
     </dependencies>
   </dependencyManagement>
 
@@ -37,6 +36,7 @@
     <dependency>
       <groupId>org.neo4j.driver</groupId>
       <artifactId>neo4j-java-driver</artifactId>
+        <version>5.28.4</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
